Courts Timeslots table css additions

--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -103,44 +103,44 @@
         <td>
             @if (item.Day1 != null)
             {
-                @Html.ActionLink(item.Day1.ToString(), "Edit", "Timeslots", new { id = item.Day1 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day1 }, new { id = item.Day1, @class = "" })
             }
 
         </td>
         <td>
             @if (item.Day2 != null)
             {
-                @Html.ActionLink(item.Day2.ToString(), "Edit", "Timeslots", new { id = item.Day2 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day2 }, new { id = item.Day2, @class = "" })
             }
         </td>
         <td>
             @if (item.Day3 != null)
             {
-                @Html.ActionLink(item.Day3.ToString(), "Edit", "Timeslots", new { id = item.Day3 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day3 }, new { id = item.Day3, @class = "" })
             }
         </td>
         <td>
             @if (item.Day4 != null)
             {
-                @Html.ActionLink(item.Day4.ToString(), "Edit", "Timeslots", new { id = item.Day4 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day4 }, new { id = item.Day4, @class = "" })
             }
         </td>
         <td>
             @if (item.Day5 != null)
             {
-                @Html.ActionLink(item.Day5.ToString(), "Edit", "Timeslots", new { id = item.Day5 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day5 }, new { id = item.Day5, @class = "" })
             }
         </td>
         <td>
             @if (item.Day6 != null)
             {
-                @Html.ActionLink(item.Day6.ToString(), "Edit", "Timeslots", new { id = item.Day6 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day6 }, new { id = item.Day6, @class = "" })
             }
         </td>
         <td>
             @if (item.Day7 != null)
             {
-                @Html.ActionLink(item.Day7.ToString(), "Edit", "Timeslots", new { id = item.Day7 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink(item.Hour.ToString("hh\\:mm"), "Details", "Timeslots", new { id = item.Day7 }, new { id = item.Day7, @class = "" })
             }
         </td>
     </tr>
@@ -148,7 +148,7 @@
 
 </table>
 <div>
-    @Html.ActionLink("Edit TimeSlots", "Index", "Timeslots", new { id = Model.Court.Id }, null)
+    @Html.ActionLink("Manage TimeSlots", "Index", "Timeslots", new { id = Model.Court.Id }, null)
 </div>
 
 
