--- a/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
@@ -46,5 +46,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to Bookings", "Index")
+    @Html.ActionLink("Back to Bookings", "Index", new { id = ViewBag.BranchId})
 </p>
