--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -31,9 +31,20 @@
     font-weight: normal;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-
-.timeSlots td a {
     background: #deee86;
 }
+
+
+    .timeSlots td div {
+        background: #F0F0F0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 100%;
+        border-radius: .25em;
+        border: 1px solid rgba(0,0,0,.125);
+        font-weight: normal;
+        text-align: center;
+        box-shadow: none;
+    }
+
+
